deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1 # Set the desired number of replicas
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: ridhimanwazir/python-webapp:latest # Replace with your Docker image name
          ports:
            - containerPort: 5000 # Expose the port specified in your Dockerfile

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 5000 # Port in the container
      nodePort: 30000
  type: NodePort
